--- a/views/bio.erb
+++ b/views/bio.erb
@@ -1,14 +1,28 @@
 <section class="container">
     <article id="biographie">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tristique urna non nibh tristique, sed venenatis enim bibendum. Vestibulum mauris felis, tincidunt in hendrerit nec, tincidunt quis massa. Aenean eu volutpat quam. Proin bibendum sodales ante, quis ultrices lacus pellentesque ut. Etiam dignissim egestas auctor. Fusce ut tempor velit, eu varius sem. Nam non vestibulum orci. In eget imperdiet turpis, in eleifend nulla. Ut malesuada tincidunt nisl, vel interdum eros egestas rutrum. Integer placerat venenatis est non malesuada. Proin volutpat diam sapien, et consequat nibh aliquam molestie. Cras placerat orci ut turpis placerat euismod. Mauris a vestibulum nibh. Integer dignissim auctor purus a placerat. Praesent velit ipsum, egestas ut justo ac, vulputate suscipit leo. Praesent placerat magna id justo tincidunt consequat.
-        Nulla vel iaculis nunc. Nulla feugiat orci eros, sed faucibus leo elementum non. Cras ultricies eros nunc, ut laoreet neque mattis et. Maecenas a dapibus odio. Aliquam sollicitudin mi tincidunt arcu convallis, non sagittis eros tempus. Etiam felis magna, pulvinar nec fringilla eu, egestas at velit. Donec ligula odio, pulvinar condimentum pellentesque sed, fermentum a diam.
-        Donec porttitor ut tellus semper hendrerit. Donec sagittis vulputate sem, eu feugiat arcu hendrerit a. Phasellus ornare ligula at suscipit venenatis. Donec posuere efficitur augue, quis finibus dui pulvinar vitae. Duis rhoncus blandit ante, vitae pellentesque arcu lacinia eu. Nunc maximus turpis nec laoreet sollicitudin. Nunc auctor volutpat neque vulputate commodo. Vivamus dictum maximus suscipit. Nam dictum justo nec arcu feugiat gravida. Ut eu felis in magna rhoncus efficitur laoreet vel diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque tempor lorem diam.
-        Sed nec tortor ut ipsum tempus imperdiet. Fusce euismod blandit quam, ac feugiat sapien pretium non. Nam quis placerat dui, tincidunt tempus nisi. Curabitur nec dictum nibh. Mauris ex massa, molestie a consectetur sit amet, elementum et diam. Maecenas quis tristique erat. Cras sed velit non orci eleifend elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-        Ut quam metus, faucibus eu eros in, imperdiet consequat eros. Quisque eget malesuada ex. Aliquam pulvinar magna vitae nisi pellentesque, eget lobortis tellus commodo. Phasellus imperdiet blandit nibh, vel placerat velit facilisis sed. Nam in hendrerit ex, et tristique dolor. Nam rutrum erat nec sem iaculis, a commodo lectus dictum. Nulla facilisi. Sed vel massa pellentesque, interdum purus ac, pellentesque magna. In tincidunt est ac pharetra molestie. Mauris diam magna, gravida nec consectetur sed, pellentesque eu neque. 
+        <div class="item">
+            <div>
+                Hektor (2019, Saint-Camille, Canada), réalise des installations, des oeuvres d'art médiatique. En appliquant un langage poétique et souvent métaphorique, Hektor étudie la dynamique du paysage, y compris la manipulation de ses effets et ses limites à partir de nos hypothèses et sur ce que le paysage signifie pour nous. Plutôt que de représenter une réalité factuelle, une illusion est fabriquée pour détourner notre attention.
+            </div>
+            <div>
+                Ses oeuvres apparaissent commes des images oniriques où fiction et réalité se rencontrent, les métaphores se confondent, les significations se décalent, le passé et le présent fusionnent.
+            </div>
+            <div>
+                Le temps et la mémoire jouent toujours un rôle clé. En explorant le concept du paysage de façon nostalgique, il veut amplifier l'étonnement du spectateur en créant des compositions ou des décors qui génèrent des images poétiques tranquilles qui laissent des traces et des équilibres à la limite de la reconnaissance et de l'aliénation.
+            </div>
+        </div>
+        <div class="item">
+            <div>
+                Ses oeuvres établissent un lien entre la réalité du paysage et et celle imaginée par son concepteur. Ses travaux se concentrent sur des questions concrètes qui déterminent notre existence. À l'aide de matériaux appropriés empruntés à un contexte quotidien, il présente le quotidien ainsi que des références à des textes, à la peinture et à l'architecture. Des écrits et des constructions utopiques sont juxtaposés à ces espaces communs.
+            </div>
+            <div>
+                En appliquant des combinaisions spécifiques et certaines manipulations, différentes fonctions et/ou contextes sont crées. Les catégories sont subtilement inversées. Il crée des situations dans lesquelles le quotidien est altéré ou détaché de sa fonction naturelle.
+            </div>
+        </div>
     </article>
 </section>
 <footer class="container">
-    <div id="credits-bio">
-        Généré par 500letters.org et traduit par Deeps
+    <div class="credits petit-texte">
+        Généré par 500letters.org et traduit par DeepL
     </div>
 </footer>
