--- a/views/bio.erb
+++ b/views/bio.erb
@@ -1,4 +1,4 @@
-<section class="container">
+<section>
     <article id="biographie">
         <div class="item">
             <div>
@@ -21,8 +21,8 @@
         </div>
     </article>
 </section>
-<footer class="container">
-    <div class="credits petit-texte">
+<footer>
+    <div class="credits">
         Généré par 500letters.org et traduit par DeepL
     </div>
 </footer>
